--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -8,26 +8,21 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Echoing files
-        run: ls -la
-
-      - name: Checkout code
-        uses: actions/checkout@v3
-
-      - name: Echoing files
-        run: ls -la
-
       - name: Find Release Asset
+        env:
+          ASSET_NAME: test.txt
+          REPO: slave-repository
+          OWNER: awesomel-es
         id: find-asset
         run: |
           RELEASE_URL=$(curl -s -H "Accept: application/vnd.github.v3+json" \
             -H "Authorization: Bearer ${{ secrets.API_GH_TK }}" \
-            "https://api.github.com/repos/awesomel-es/slave-repository/releases/latest" | jq -r '.url')
+            "https://api.github.com/repos/${{ env.OWNER }}/${{ env.REPO }}/releases/latest" | jq -r '.url')
+
           echo "Release URL: $RELEASE_URL"
-          ASSET_NAME="Pictures.40a5emu33g7b1.jpg.webp"
           ASSET_ID=$(curl -s -H "Accept: application/vnd.github.v3+json" \
             -H "Authorization: Bearer ${{ secrets.API_GH_TK }}" \
-            "$RELEASE_URL/assets" | jq -r ".[] | select(.name == \"$ASSET_NAME\") | .id")
+            "$RELEASE_URL/assets" | jq -r ".[] | select(.name == \"${{ env.ASSET_NAME }}\") | .id")
 
           echo "Asset ID: $ASSET_ID"
 
@@ -35,7 +30,7 @@ jobs:
           curl -LOJ -H "Accept: application/octet-stream" \
             -H "Authorization: Bearer ${{ secrets.API_GH_TK }}" \
             -H "X-GitHub-Api-Version: 2022-11-28" \
-            "https://api.github.com/repos/awesomel-es/slave-repository/releases/assets/$ASSET_ID"
+            "https://api.github.com/repos/${{ env.OWNER }}/${{ env.REPO }}/releases/assets/$ASSET_ID"
 
       - name: Echoing files
         run: ls -la
