--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -6,31 +6,37 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    env:
+      ASSET_NAME: test.txt
+      REPO: slave-repository
+      OWNER: awesomel-es
 
     steps:
-      - name: Find Release Asset
-        env:
-          ASSET_NAME: test.txt
-          REPO: slave-repository
-          OWNER: awesomel-es
-        id: find-asset
+      - name: Find Release URL
+        id: find-release-url
         run: |
           RELEASE_URL=$(curl -s -H "Accept: application/vnd.github.v3+json" \
             -H "Authorization: Bearer ${{ secrets.API_GH_TK }}" \
             "https://api.github.com/repos/${{ env.OWNER }}/${{ env.REPO }}/releases/latest" | jq -r '.url')
 
-          echo "Release URL: $RELEASE_URL"
+          echo "release_url=$RELEASE_URL" >> "$GITHUB_OUTPUT"
+
+      - name: Find Asset ID
+        id: find-asset-id
+        run: |
           ASSET_ID=$(curl -s -H "Accept: application/vnd.github.v3+json" \
-            -H "Authorization: Bearer ${{ secrets.API_GH_TK }}" \
-            "$RELEASE_URL/assets" | jq -r ".[] | select(.name == \"${{ env.ASSET_NAME }}\") | .id")
+          -H "Authorization: Bearer ${{ secrets.API_GH_TK }}" \
+          "${{ steps.find-release-url.outputs.release_url }}/assets" | jq -r ".[] | select(.name == \"${{ env.ASSET_NAME }}\") | .id")
 
-          echo "Asset ID: $ASSET_ID"
-
+          echo "asset_id=$ASSET_ID" >> "$GITHUB_OUTPUT"
+        
+      - name: Download Asset
+        run: |
           # Download the asset's binary content
           curl -LOJ -H "Accept: application/octet-stream" \
             -H "Authorization: Bearer ${{ secrets.API_GH_TK }}" \
             -H "X-GitHub-Api-Version: 2022-11-28" \
-            "https://api.github.com/repos/${{ env.OWNER }}/${{ env.REPO }}/releases/assets/$ASSET_ID"
+            "https://api.github.com/repos/${{ env.OWNER }}/${{ env.REPO }}/releases/assets/${{ steps.find-asset-id.outputs.asset_id }}"
 
       - name: Echoing files
         run: ls -la
