--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,6 +6,7 @@ on:
 env:
     upload_artifact_name: test
     upload_file_name: test.txt
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -26,3 +27,20 @@ jobs:
         with:
             name: ${{ env.upload_artifact_name }}
             path: ${{ env.upload_file_name }} 
+
+  create-release:
+    needs: build
+    uses: awesomel-es/slave-repository/.github/workflows/create_release.yml
+    with:
+        owner: ${{ github.repository_owner }}
+        repository_name: ${{ github.event.repository.name }}
+        tag_name: v11.0.0
+    secrets:
+        access_token: ${{ secrets.API_GH_TK }}
+
+  echoing-output:
+    needs: create-release
+    runs-on: ubuntu-latest
+    steps:
+      - name: Echoing data
+        run: echo '${{ needs.create-release.outputs.release_id }}'
