--- a/.github/workflows/create_release.yml
+++ b/.github/workflows/create_release.yml
@@ -23,6 +23,8 @@ on:
 jobs:
   create-release:
     runs-on: ubuntu-latest
+    outputs:
+      release_id: ${{steps.create-release.outputs.release_id}}
     steps:
       - name: Create release
         id: create-release
