--- a/.github/workflows/download_main.yml
+++ b/.github/workflows/download_main.yml
@@ -31,7 +31,7 @@ jobs:
         run: mkdir dependencies
 
       - name: Download artifact
-        uses: actions/upload-artifact@v3
+        uses: actions/download-artifact@v3
         with:
           name: test
           path: dependencies/ 
