--- a/.github/workflows/check_release.yml
+++ b/.github/workflows/check_release.yml
@@ -8,6 +8,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Build
+        env:
+            GH_TOKEN: ${{github.token}}
         run: |
           gh api \
           -H "Accept: application/vnd.github+json" \
