--- a/.github/workflows/check_release.yml
+++ b/.github/workflows/check_release.yml
@@ -8,6 +8,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Build
+        name: checking
         env:
             GH_TOKEN: ${{github.token}}
         run: |
@@ -15,3 +16,14 @@ jobs:
           -H "Accept: application/vnd.github+json" \
           -H "X-GitHub-Api-Version: 2022-11-28" \
           /repos/${{ github.repository_owner }}/${{ github.event.repository.name }}/releases/tags/v11.0.4
+      - name: Echoing
+        run: echo ${{steps.checking.outcome}}
+      
+      - name: Exists
+        if: always()
+        run: echo "Version exists"
+      
+      - name: Exists
+        if: always() && steps.integrationTests.outcome == 'failure'
+        run: echo "Version exists"
+        
