--- a/.github/workflows/check_release.yml
+++ b/.github/workflows/check_release.yml
@@ -7,8 +7,8 @@ jobs:
   check_release:
     runs-on: ubuntu-latest
     steps:
-      - name: Build
-        name: checking
+      - name: checking
+        id: checking
         env:
             GH_TOKEN: ${{github.token}}
         run: |
